--- a/app/src/main/res/layout/item_animal.xml
+++ b/app/src/main/res/layout/item_animal.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/animalLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -9,9 +10,6 @@
         android:id="@+id/animalImage"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:scaleType="center"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,15 +18,13 @@
 
     <TextView
         android:id="@+id/animalName"
+        style="@style/Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:background="#afff"
         android:gravity="center"
         android:padding="4dp"
         android:text="Animal Name"
-        style="@style/Title"
         app:layout_constraintBottom_toBottomOf="@+id/animalImage"
         app:layout_constraintEnd_toEndOf="@+id/animalImage"
         app:layout_constraintStart_toStartOf="parent" />
