--- a/app/src/main/res/navigation/animal_nav.xml
+++ b/app/src/main/res/navigation/animal_nav.xml
@@ -8,19 +8,23 @@
     <fragment
         android:id="@+id/listFragment"
         android:name="com.emmanuelamet.animal_info.view.ListFragment"
-        android:label="fragment_list"
+        android:label="Home"
         tools:layout="@layout/fragment_list" >
         <action
             android:id="@+id/action_listFragment_to_detailFragment"
             app:destination="@id/actionDetail" />
     </fragment>
+
     <fragment
         android:id="@+id/actionDetail"
         android:name="com.emmanuelamet.animal_info.view.DetailFragment"
-        android:label="fragment_detail"
+        android:label="Detail"
         tools:layout="@layout/fragment_detail" >
         <action
             android:id="@+id/action_actionDetail_to_listFragment2"
             app:destination="@id/listFragment" />
+        <argument
+            android:name="animal"
+            app:argType="com.emmanuelamet.animal_info.model.Animal" />
     </fragment>
 </navigation>
